<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fragment_bg">
    <android.support.v7.widget.CardView
        android:id="@+id/collect_card"
        android:layout_width="match_parent"
        android:layout_height="@dimen/me_card_height"
        android:layout_marginTop="20dp"
        android:foreground="?attr/selectableItemBackground"
        app:cardCornerRadius="0dp"
        app:cardElevation="0dp"
        android:clickable="true">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_gravity="center_vertical">
            <LinearLayout
                android:layout_weight="2"
                android:layout_width="0dp"
                android:layout_height="wrap_content">
                <ImageView
                    android:layout_width="17dp"
                    android:layout_height="17dp"
                    android:src="@mipmap/collection"
                    android:layout_marginLeft="20dp"/>
            </LinearLayout>
            <LinearLayout
                android:layout_weight="8"
                android:layout_width="0dp"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/text_size_17"
                    android:textColor="@color/colorText"
                    android:text="@string/collection" />
            </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/feedback"
        android:layout_width="match_parent"
        android:layout_height="@dimen/me_card_height"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="0dp"
        android:foreground="?attr/selectableItemBackground"
        android:clickable="true"
        app:cardCornerRadius="0dp"
        app:cardElevation="0dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_gravity="center_vertical">
            <LinearLayout
                android:layout_weight="2"
                android:layout_width="0dp"
                android:layout_height="wrap_content">
                <ImageView
                    android:layout_width="17dp"
                    android:layout_height="17dp"
                    android:src="@mipmap/feedback"
                    android:layout_marginLeft="20dp"/>
            </LinearLayout>
            <LinearLayout
                android:layout_weight="8"
                android:layout_width="0dp"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/text_size_17"
                    android:textColor="@color/colorText"
                    android:text="@string/feedback" />
            </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>
    <View
        android:layout_width="fill_parent"
        android:layout_height="1.0dip"
        android:background="#ffe0e0e0"
        android:paddingBottom="3.0dip"
        android:paddingTop="3.0dip" />
    <android.support.v7.widget.CardView
        android:id="@+id/setup_card"
        android:layout_width="match_parent"
        android:layout_height="@dimen/me_card_height"
        android:layout_marginTop="0dp"
        android:foreground="?attr/selectableItemBackground"
        android:clickable="true"
        app:cardCornerRadius="0dp"
        app:cardElevation="0dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_gravity="center_vertical">
            <LinearLayout
                android:layout_weight="2"
                android:layout_width="0dp"
                android:layout_height="wrap_content">
                <ImageView
                    android:layout_width="17dp"
                    android:layout_height="17dp"
                    android:src="@mipmap/setup"
                    android:layout_marginLeft="20dp"/>
            </LinearLayout>
            <LinearLayout
                android:layout_weight="8"
                android:layout_width="0dp"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/text_size_17"
                    android:textColor="@color/colorText"
                    android:text="@string/setup" />
            </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>
    <View
        android:layout_width="fill_parent"
        android:layout_height="1.0dip"
        android:background="#ffe0e0e0"
        android:paddingBottom="3.0dip"
        android:paddingTop="3.0dip" />
    <android.support.v7.widget.CardView
        android:id="@+id/about_card"
        android:layout_width="match_parent"
        android:layout_height="@dimen/me_card_height"
        android:layout_marginTop="0px"
        android:foreground="?attr/selectableItemBackground"
        android:clickable="true"
        app:cardCornerRadius="0dp"
        app:cardElevation="0dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_gravity="center_vertical">
            <LinearLayout
                android:layout_weight="2"
                android:layout_width="0dp"
                android:layout_height="wrap_content">
                <ImageView
                    android:layout_width="17dp"
                    android:layout_height="17dp"
                    android:src="@mipmap/about"
                    android:layout_marginLeft="20dp"/>
            </LinearLayout>
            <LinearLayout
                android:layout_weight="8"
                android:layout_width="0dp"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/text_size_17"
                    android:textColor="@color/colorText"
                    android:text="@string/about" />
            </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>
    <View
        android:layout_width="fill_parent"
        android:layout_height="1.0dip"
        android:background="#ffe0e0e0"
        android:paddingBottom="3.0dip"
        android:paddingTop="3.0dip" />
    <android.support.v7.widget.CardView
        android:id="@+id/fuli_card"
        android:layout_width="match_parent"
        android:layout_height="@dimen/me_card_height"
        android:layout_marginTop="0px"
        android:foreground="?attr/selectableItemBackground"
        android:clickable="true"
        app:cardCornerRadius="0dp"
        app:cardElevation="0dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_gravity="center_vertical">
            <LinearLayout
                android:layout_weight="2"
                android:layout_width="0dp"
                android:layout_height="wrap_content">
                <ImageView
                    android:layout_width="15dp"
                    android:layout_height="15dp"
                    android:src="@mipmap/heart_fuli"
                    android:layout_marginLeft="20dp"/>
            </LinearLayout>
            <LinearLayout
                android:layout_weight="8"
                android:layout_width="0dp"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/text_size_17"
                    android:textColor="@color/colorText"
                    android:text="@string/fuli" />
            </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>